added rank endpoint, made changes to nearby stations endpoint
