# server/routes/crimes.py
@@ -1,7 +1,7 @@
 from flask import request, abort, jsonify
 from flask import jsonify
 from server.models import db
-from server.utils import crimes_near_point
+from server.utils import crimes_near_point, Dates
 from sqlalchemy.sql import text, select, join
 from datetime import datetime, timedelta
 from typing import List
@@ -11,15 +11,10 @@ def nearby_crimes_by_point():
     lat: float = request.args.get('latitude')
     lon: float  = request.args.get('longitude')
 
-    crime_filter: tuple = tuple([ int(a) for a in request.args.getlist('filter') ])
+    crime_filter: tuple = tuple( int(a) for a in request.args.getlist('filter') )
     crime_filter = crime_filter if len(crime_filter) > 0 else tuple(range(1,13))
 
-    time_range: int = request.args.get('timeSpan', 365)
-
-    if time_range == 'week':
-        time_range = 7
-    elif time_range == 'month':
-        time_range = 30
+    time_range: int = Dates[request.args.get('timeSpan', 'year')]
 
     results: List[tuple] = crimes_near_point(lat, lon, crime_filter, time_range)
 
