# server/utils/__init__.py
@@ -1,6 +1,16 @@
 from server.models import db
 from sqlalchemy.sql import text
 from datetime import timedelta, datetime, date
+from typing import Dict
+
+Dates: dict = {
+    "week": 7,
+    "month": 30,
+    "3 months": 90,
+    "6 months": 180,
+    "9 months": 270,
+    "year": 365
+}
 
 def five_closest_stations(latitude: float, longitude: float) -> list:
     query = text(
@@ -59,7 +69,7 @@ def crimes_near_point(latitude: float, longitude: float, categories: tuple, rang
 def station_percentile_rank(station_ids: tuple, categories: tuple, range: int) -> list:
     query = text(
         '''
-        select t8.id, t8.name, t8.line, t8.sum / cast(t9.max as float) * 100 as percentile from (
+         with subquery as (
             select t7.id, t7.name, t7.line, coalesce(t7.sum, 0) as sum, t7.count from (
                 select t5.id, t5.name, t5.line, sum(t6.risk_points), count(t6.category) from stations as t5 left join (
                     select * from crimes_by_station as t3 join (
@@ -67,19 +77,12 @@ def station_percentile_rank(station_ids: tuple, categories: tuple, range: int) -
                     ) as t4 on t3.crime_id = t4.id
                 ) as t6 on t5.id = t6.station_id group by t5.id
             ) as t7
-        ) as t8 join (
-            select max(coalesce(t7.sum, 0)) from (
-                select t5.id, t5.name, t5.line, sum(t6.risk_points), count(t6.category) from stations as t5 left join (
-                    select * from crimes_by_station as t3 join (
-                        select t1.category, t1.risk_points, t2.id from crime_categories as t1 join crime_info as t2 on t1.id = t2.category_id where t1.id = any(:cat) and t2.crime_date > current_date - :range
-                    ) as t4 on t3.crime_id = t4.id
-                ) as t6 on t5.id = t6.station_id group by t5.id
-            ) as t7
-        ) as t9 on true where t8.id = any(:s_id);
+        )
+        select t1.id, t1.name, t1.line, t1.sum / cast(t2.max as float) * 100 as percentile from subquery as t1 join (select max(coalesce(subquery.sum, 0)) from subquery) as t2 on true where t1.id = any(:cat) order by percentile
         '''
     ) if len(station_ids) > 0 else text(
         '''
-        select t8.id, t8.name, t8.line, t8.sum / cast(t9.max as float) * 100 as percentile from (
+        with subquery as (
             select t7.id, t7.name, t7.line, coalesce(t7.sum, 0) as sum, t7.count from (
                 select t5.id, t5.name, t5.line, sum(t6.risk_points), count(t6.category) from stations as t5 left join (
                     select * from crimes_by_station as t3 join (
@@ -87,20 +90,13 @@ def station_percentile_rank(station_ids: tuple, categories: tuple, range: int) -
                     ) as t4 on t3.crime_id = t4.id
                 ) as t6 on t5.id = t6.station_id group by t5.id
             ) as t7
-        ) as t8 join (
-            select max(coalesce(t7.sum, 0)) from (
-                select t5.id, t5.name, t5.line, sum(t6.risk_points), count(t6.category) from stations as t5 left join (
-                    select * from crimes_by_station as t3 join (
-                        select t1.category, t1.risk_points, t2.id from crime_categories as t1 join crime_info as t2 on t1.id = t2.category_id where t1.id = any(:cat) and t2.crime_date > current_date - :range
-                    ) as t4 on t3.crime_id = t4.id
-                ) as t6 on t5.id = t6.station_id group by t5.id
-            ) as t7
-        ) as t9 on true;
+        )
+        select t1.id, t1.name, t1.line, t1.sum / cast(t2.max as float) * 100 as percentile from subquery as t1 join (select max(coalesce(subquery.sum, 0)) from subquery) as t2 on true order by percentile
         '''
     )
 
     with db.connect() as conn:
-        results = conn.execute(query, cat=categories, range=range, s_id=station_ids) if station_ids > 0 else conn.execute(query, cat=categories, range=range).fetchall()
+        results = conn.execute(query, cat=categories, range=range, s_id=station_ids) if len(station_ids) > 0 else conn.execute(query, cat=categories, range=range).fetchall()
 
     return results
 
